--- a/deploy/k8s/helm/catalog-api/templates/configmap.yaml
+++ b/deploy/k8s/helm/catalog-api/templates/configmap.yaml
@@ -15,6 +15,7 @@ metadata:
 data:
   catalog__ConnectionString: Server={{ $sqlsrv }};Initial Catalog={{ .Values.inf.sql.catalog.db }};User Id={{ .Values.inf.sql.common.user }};Password={{ .Values.inf.sql.common.pwd }};
   catalog__PicBaseUrl: {{ $protocol }}://{{ $webshoppingapigw }}/c/api/v1/catalog/items/[0]/pic/
+  catalog__UseCustomizationData: "True"
   catalog__AzureStorageEnabled: "{{ .Values.inf.misc.useAzureStorage }}"
   all__EventBusConnection: {{ .Values.inf.eventbus.constr }}
   all__InstrumentationKey: "{{ .Values.inf.appinsights.key }}"
