--- a/deploy/k8s/helm/ordering-backgroundtasks/templates/deployment.yaml
+++ b/deploy/k8s/helm/ordering-backgroundtasks/templates/deployment.yaml
@@ -21,6 +21,11 @@ spec:
       labels:
         app: {{ template "ordering-backgroundtasks.name" . }}
         release: {{ .Release.Name }}
+      annotations:
+        dapr.io/enabled: "true"
+        dapr.io/app-id: "ordering-backgroundtasks"
+        dapr.io/app-port: "80"
+        dapr.io/config: "config"
     spec:
       {{ if .Values.inf.registry -}}
       imagePullSecrets:
