--- a/deploy/k8s/helm/webhooks-api/templates/deployment.yaml
+++ b/deploy/k8s/helm/webhooks-api/templates/deployment.yaml
@@ -21,10 +21,11 @@ spec:
       labels:
         app: {{ template "webhooks-api.name" . }}
         release: {{ .Release.Name }}
-      {{ if .Values.inf.mesh.enabled -}}
       annotations:
-        linkerd.io/inject: enabled
-      {{- end }}             
+        dapr.io/enabled: "true"
+        dapr.io/app-id: "webhooks-api"
+        dapr.io/app-port: "80"
+        dapr.io/config: "config"
     spec:
       {{ if .Values.inf.registry -}}
       imagePullSecrets:
